--- a/LAB1/index.html
+++ b/LAB1/index.html
@@ -12,8 +12,8 @@
 <body> 
     Hello World !!!
 
-    <h1>นางสาวลิลดา ฟับประโคน</h1>
-    <h2>650112418078</h2>
+    <h1>นายภัทรพล วงค์จรัส</h1>
+    <h2>650112418062</h2>
 
     <p><strong>สาขาวิชา</strong>เทคโนโลยีสารสนเทศ</p>
     <span>คณะวิทยาศาสตร์ <br>มหาวิทยาลัยราชภัฎบุรีรัมย์</span>
